--- a/Lenguaje_de_marcas/practicas/freshIdeas/style/style.css
+++ b/Lenguaje_de_marcas/practicas/freshIdeas/style/style.css
@@ -12,15 +12,18 @@ html {
 /* Body */
 
 body {
-    margin: 0 8% 0 8%;
+    margin: 0 20% 0 20%;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    float: left;
 }
 
 /* Header */
 
 header img {
-    margin: 50px 0 0 20px;
+    position: relative;
+    top: 30px;
+    left: 20PX;
 }
 
 header nav {
@@ -44,28 +47,117 @@ header nav ul li a {
 }
 
 header #home {
-    background-color: rgb(255, 203, 31);
+    background-color: rgb(255, 200, 21);
     padding: 15px 12px 16px 12px;
 }
 
 /* Banner */
 
-.banner{
+.banner {
     border: solid 10px rgb(195, 195, 195);
-    margin: 0 20px 0 20px;
+    margin: 80px 20px 0 20px;
     height: 318px;
+    background-image: url(../images/banner.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
-.banner h1{
-    position: absolute;
-    z-index: 3;
+.banner section {
+    position: relative;
+    width: 30%;
+    left: 7%;
+    top: 30%;
 }
 
-.banner p{
-    position: absolute;
-    z-index: 3;
+.banner section h1 {
+    font-size: 30px;
+    border-bottom: 1px black dotted;
+    margin: 0 0 8px 0;
 }
 
-.banner img{
+.banner section p {
+    margin:  0 0 20px 0;
+}
+
+.banner section a {
+    background-color: rgb(26, 26, 26);
+    color: white;
+    text-decoration: none;
+    padding: 10px 30px;
+    text-align: center;
+}
+
+aside {
+    width: 25%;
     float: right;
+    margin: 30px 20px 0 0;
+}
+
+h2 {
+    font-size: 30px;
+    border-bottom: 1px black dotted;
+    padding-bottom: 8px;
+}
+
+aside section {
+    margin: 20px 0 0 0;
+    border-bottom: 1px black dotted;
+}
+
+h3{
+    font-weight: 100;
+}
+
+aside section time {
+    position: relative;
+    left: 130px;
+    top: -18px;
+    padding: 8px;
+    font-weight: 900;
+    background-color: orange;
+}
+
+aside section p {
+    margin: 0 0 20px 0;
+}
+
+aside section p a {
+    text-decoration: none;
+    color: black;
+    font-weight: 900;
+}
+
+aside img {
+    margin-top: 10px;
+    padding: 14px;
+    border: 1px dotted black;
+}
+
+
+main {
+    width: 70%;
+    float: left;
+    margin: 30px 0 20px;
+}
+
+
+
+
+
+
+
+
+
+footer{
+    float: left;
+    margin-left: -34%;
+    bottom: 0;
+    color: white;
+    width: 167%;
+    background-color: black;
+}
+
+footer p {
+    position: relative;
 }
