--- a/Lenguaje_de_marcas/practicas/freshIdeas/style/style.css
+++ b/Lenguaje_de_marcas/practicas/freshIdeas/style/style.css
@@ -1,17 +1,21 @@
+
+
+
 /* Fresh Idea CSS */
 
+/* All */
 * {
     padding: 0;
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
 }
 
+/* HTML */
 html {
     background-image: url(../images/bg.png);
 }
 
 /* Body */
-
 body {
     margin: 0 20% 0 20%;
     background-color: white;
@@ -20,17 +24,22 @@ body {
 }
 
 /* Header */
+header {
+    width: 100%;
+    height: 110px;
+}
 
 header img {
     position: relative;
     top: 30px;
-    left: 20PX;
+    left: 20px;
 }
 
 header nav {
     float: right;
-    margin: 60px 20px 0 0;
-    padding: 5px 0 5px 8px;
+    margin: 45px 20px 0 0;
+    width: 678px;
+    height: 60px;
     background-color: black;
 }
 
@@ -38,22 +47,33 @@ header nav ul li {
     list-style: none;
     float: left;
     width: auto;
-    padding: 10px;
+    padding: 18px;
 }
 
 header nav ul li a {
     color: white;
     font-size: 20px;
     text-decoration: none;
+    padding: 15px 5px 15px 5px;
+}
+
+header nav ul li:hover {
+    background-color: rgb(81, 81, 81);
+
 }
 
 header #home {
     background-color: rgb(255, 200, 21);
-    padding: 15px 12px 16px 12px;
+    padding: 18.3px;
+    margin: 0 0 0 20px;
+
+}
+
+header #home:hover {
+    background-color: rgb(255, 219, 101);
 }
 
 /* Banner */
-
 .banner {
     border: solid 10px rgb(215, 215, 215);
     margin: 80px 20px 0 20px;
@@ -69,6 +89,8 @@ header #home {
     width: 30%;
     left: 7%;
     top: 30%;
+    height: 170px;
+    width: 300px;
 }
 
 .banner section h1 {
@@ -86,9 +108,13 @@ header #home {
     color: white;
     text-decoration: none;
     padding: 10px 30px;
-    text-align: center;
 }
 
+.banner section a:hover {
+    background-color: rgb(81, 81, 81);
+}
+
+/* ASIDE */
 aside {
     width: 25%;
     float: right;
@@ -129,105 +155,121 @@ aside section p a {
     font-weight: 900;
 }
 
+aside section p a:hover {
+    color: rgb(81, 81, 81);
+}
+
 aside img {
     margin-top: 10px;
     padding: 14px;
     border: 1px dotted black;
+    width: 90%;
 }
 
-
+/* MAIN */
 main {
     width: 65%;
     float: left;
     margin: 30px 0 20px 20px;
 }
 
-.services {
-    margin-bottom: 20px;
-    float: left;
-}
+/* services */
+    .services {
+        margin-bottom: 20px;
+        float: left;
+    }
 
-.services h2 {
-    margin: 0 0 10px 0;
-}
+    .services h2 {
+        margin: 0 0 10px 0;
+    }
 
-.services section {
-    float: left;
-    margin: 0 0 5px 0;
-}
+    .services section {
+        float: left;
+        margin: 0 0 5px 0;
+    }
 
-.services section img {
-    float: left;
-    margin: 10px 14px 10px 0;
-    padding: 10px;
-    border: solid rgb(216, 216, 216) 1px;
-}
+    .services section img {
+        float: left;
+        margin: 10px 14px 10px 0;
+        padding: 10px;
+        border: solid rgb(216, 216, 216) 1px;
+    }
 
-.services section h3 {
-    float: left;
-    width: 70%;
-    margin: 12px 0 0 0;
-}
+    .services section h3 {
+        float: left;
+        width: 70%;
+        margin: 12px 0 0 0;
+    }
 
-.services section p {
-    width: 70%;
-    float: left;
-    margin: 7px 0 0 0;
-    font-size: 17px;
-}
+    .services section p {
+        width: 70%;
+        float: left;
+        margin: 7px 0 0 0;
+        font-size: 17px;
+    }
 
-.services section a {
-    width: 70%;
-    float: left;
-    margin: 7px 0 0 0;
-    text-decoration: none;
-    color: black;
-    font-weight: 900;
-    font-size: 18px;
-}
+    .services section a {
+        width: 70%;
+        float: left;
+        margin: 7px 0 0 0;
+        text-decoration: none;
+        color: black;
+        font-weight: 900;
+        font-size: 18px;
+    }
+    .services section a:hover {
+        color: rgb(81, 81, 81);
+    }
 
 /* About Us */
-.aboutUs {
-    margin-bottom: 20px;
-    float: left;
-}
+    .aboutUs {
+        margin-bottom: 20px;
+        float: left;
+    }
 
-.aboutUs section {
-    margin-top: 5px;
-}
+    .aboutUs section {
+        margin-top: 5px;
+    }
 
-.aboutUs section img {
-    float: left;
-    margin: 10px 14px 10px 0;
-    padding: 15px 10px 15px 10px;
-    border: solid rgb(216, 216, 216) 1px;
-}
+    .aboutUs section img {
+        float: left;
+        margin: 10px 14px 10px 0;
+        padding: 15px 10px 15px 10px;
+        border: solid rgb(216, 216, 216) 1px;
+    }
 
-.aboutUs section p {
-    float: left;
-    width: 60%;
-    margin: 13px 0 0 0;
-}
+    .aboutUs section p {
+        float: left;
+        width: 60%;
+        margin: 13px 0 0 0;
+    }
 
-.aboutUs section a {
-    text-decoration: none;
-    color: black;
-    font-weight: 900;
-    font-size: 18px;
-}
- 
-.testimonials {
-    float: left;
-    margin-bottom: 40px;
-}
+    .aboutUs section a {
+        text-decoration: none;
+        color: black;
+        font-weight: 900;
+        font-size: 18px;
+    }
 
-.testimonials p {
-    float: left;
-    width: 100%;
-    margin: 15px 0 0 0;
-}
+    .aboutUs section a:hover {
+        color: rgb(81, 81, 81);
+
+    }
+
+/* Testimonials */
+    .testimonials {
+        float: left;
+        margin-bottom: 40px;
+    }
+
+    .testimonials p {
+        float: left;
+        width: 100%;
+        margin: 15px 0 0 0;
+    }
 
 
+/* FOOTER */
 footer{
     float: left;
     margin-left: -34%;
