--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -1,59 +1,6 @@
-/*
- ______________________________________________________________________________________________________________________________________
-|  __________________________________________________________________________________________________________________________________  |
-| |   _______________                                                                                                                | |
-| |  |               |                                                                                                               | |
-| |  |     logo      |                                                                                                               | |
-| |  |               |                                                                                                               | |
-| |  |_______________|                                                                                                               | |
-| |__________________________________________________________________________________________________________________________________| |
-|                                                                                                                                      |
-|  __________________________________________________________________________________________________________________________________  |
-| |            __________________   __________________   __________________   __________________   __________________                | |
-| |           |                  | |                  | |                  | |                  | |                  |               | |
-| |           |     popular      | |     género       | |      nuevos      | |     noticias     | |  mi biblioteca   |               | |
-| |           |                  | |                  | |                  | |                  | |                  |               | |
-| |           |__________________| |__________________| |__________________| |__________________| |__________________|               | |
-| |__________________________________________________________________________________________________________________________________| |
-|                                                                                                                                      |
-|  _____________________________________________________________________________________________________   __________________________  |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |                                                                                                     | |                          | |
-| |_____________________________________________________________________________________________________| |__________________________| |
-|                                                                                                                                      |
-|  __________________________________________________________________________________________________________________________________  |
-| |                                                                                                                                  | |
-| |                                                                                                                                  | |
-| |                                                                                                                                  | |
-| |                                                                                                                                  | |
-| |                                                                                                                                  | |
-| |                                                                                                                                  | |
-| |__________________________________________________________________________________________________________________________________| |
-|______________________________________________________________________________________________________________________________________|
 
+
+/* 
     ++FUSION++
     https://lenguajecss.com/css/efectos/modos-de-fusion/
 
@@ -95,6 +42,53 @@
     pointer-events: none;
     z-index: 10 ;
 }
+
+
+
+
+
+/* error */
+
+
+.error {
+    height: 800px;
+}
+
+.error section {
+    position: absolute;
+    left: 33%;
+    top: 25%;
+    width: 33%;
+    height: 60%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.error section h1 {
+    position: relative;
+    top: 20px;
+    left: 30px;
+    font-size: 60px;
+}
+
+.error section p {
+    position: relative;
+    top: 50px;
+    left: 30px;
+    font-size: 30px;
+}
+
+.error section img {
+    position: relative;
+    top: 12%;
+    left: 5%;
+    width: 90%;
+    height: 60%;
+}
+
+
+
+
 
 .neonText {
     animation: flicker 1.5s infinite alternate;
@@ -168,6 +162,11 @@ header h1{
     height: 90px;
     padding: 60px 800px 0 40px;
     font-size: 300%;
+}
+
+header h1 a {
+    color: white;
+    text-decoration: none;
 }
     header p {  
         position: absolute;
@@ -261,19 +260,6 @@ header h1{
     #mainNav ul li:hover > ul {
         display:block;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -514,15 +500,40 @@ main {
 
 /* cada manga */
 main article{
+    float: left;
     margin-right: 10px;
     margin-bottom: 30px;
-    float: left;
     padding: 8px;
     width: 233px;
     border-radius: 3%;
-    
 }
 
+
+    /* Navegacion de pagina */
+    .pagNavegation {
+        float: right;
+        width: 65%;
+    }
+
+    .pagNavegation ul li {
+        display: inline-block;
+        background-color: #d81444;
+        padding: 15px 20px 15px 20px;
+        margin: 5px;
+        border-radius: 10px;
+    }
+    
+    .pagNavegation ul li:hover {
+        background-color: #ee436d;
+    }
+
+    .pagNavegation ul li a {
+        text-decoration: none;
+        font-size: 20px;
+        color: black;
+        font-weight: 900;
+        padding: auto;
+    }
 
 
 #PORTADAS{
