--- a/Lenguaje_de_marcas/mangak/styles/style.css
+++ b/Lenguaje_de_marcas/mangak/styles/style.css
@@ -310,15 +310,7 @@ label i:hover {
 
 }
 
-    /* Log put bottom */
-    #logout{
-        position: relative;
-        top: 35%;
-    }
 
-    #logout:hover{
-        background-color: #d81444;
-    }
     
 #cuentaLateral{
     float: left;
@@ -362,6 +354,20 @@ label i:hover {
     right:0;
 }
 
+    /* Log put bottom */
+    #loggin {
+        background-color: #69ff6e;
+    }
+    
+    #logout{
+        position: relative;
+        top: 35%;
+        background-color: #ee436d;
+    }
+
+    #logout:hover{
+        background-color: #d81444;
+    }
 
 /**Aside**/
 aside {
