--- a/Lenguaje_de_marcas/mangak/styles/formulario.css
+++ b/Lenguaje_de_marcas/mangak/styles/formulario.css
@@ -1,5 +1,96 @@
+body {
+    background-color: black;
+}
+
+/* logging */
+
+
+.contenedor {
+    width: 300px;
+    margin: 190px auto 330px;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 2px rgb(255, 255, 255),
+        0 0 10px rgb(255, 255, 255),
+        0 0 10px rgb(255, 0, 98),
+        0 0 12px rgb(255, 0, 98),
+        0 0 25px rgb(255, 0, 98),
+        0 0 30px rgb(255, 0, 98);
+    ;
+}
+
+h1 {
+    text-align: center;
+}
+
 .formulario {
-    background-color: white;
-    width: 40%;
-    margin:0 0 0 30%
+    margin-top: 20px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+    width: 100%;
+    padding: 10px 10px 20px 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-bottom: 1px solid #929292;
+    outline: none;
+}
+
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
+    color: #929292;
+}
+
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: rgb(218, 81, 109);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+input[type="submit"]:hover {
+    background-color: crimson;
+}
+
+
+input[value="Registrarse"] {
+    color: white;
+    font-weight: 900;
+    font-size: 17px;
+}
+
+input:focus:invalid {
+    background-color: red;
+}
+
+input:focus:valid {
+    background-color: greenyellow;
+}
+
+
+
+
+
+
+
+
+#textoFormulario {
+    text-align: center;
+}
+
+#signIn,
+#loggin {
+    color: #007bff;
+    text-decoration: none;
+}
+
+#signIn:hover,
+#loggin:hover {
+    text-decoration: underline;
 }
