--- a/Lenguaje_de_marcas/mangak/styles/formulario.css
+++ b/Lenguaje_de_marcas/mangak/styles/formulario.css
@@ -114,7 +114,7 @@ input:focus:valid {
 #username:focus:valid,
 #email:focus:valid,
 #password:focus:valid {
-    background-color:white;
+    background-color: white;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Check_green_icon.svg/2048px-Check_green_icon.svg.png);
     background-repeat: no-repeat;
     background-size: 10%;
@@ -184,7 +184,7 @@ input:focus:valid {
     text-decoration: underline;
 }
 
-#notificacion {
+#notification {
     margin-top: 12px;
     float: left;
 }
@@ -198,4 +198,25 @@ input:focus:valid {
     position: relative;
     left: 23px;
     top: -20px;
+}
+
+
+.valido {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.613);
+    z-index: 69;
+}
+
+.valido article {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 200px;
+    background-color: #fff;
 }
