--- a/Lenguaje_de_marcas/mangak/styles/formulario.css
+++ b/Lenguaje_de_marcas/mangak/styles/formulario.css
@@ -202,7 +202,9 @@ input:focus:valid {
 
 
 .valido {
+
     display: none;
+    
     position: fixed;
     width: 100%;
     height: 100%;
@@ -219,4 +221,18 @@ input:focus:valid {
     transform: translate(-50%, -50%);
     height: 200px;
     background-color: #fff;
+    border-radius: 10px;
+    padding: 30px;
+}
+
+.valido article a {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-decoration: none;
+    color: white;
+    background-color: crimson;
+    padding: 5px;
+    border-radius: 10px;
 }
